# Hoverboard-Firmware-Hack-Gen2.x-Raspberry-Pi-Controller

./: CMakeLists.txt  README.md
inc/: hoverserial.h  util.h
src/: hoverserial.c  main.c
